Log site engagement scores for permission actions

This patch adds histograms for tracking site engagement scores for
permission prompts, Permissions.Engagement.[Action].[Permission].

BUG=731349

Review-Url: https://codereview.chromium.org/2952003003
Cr-Commit-Position: refs/heads/master@{#488573}

Former-commit-id: 102eac87872ad8b399aeec59422e4f270826563f