chrome/browser/permissions/mock_permission_request.cc
@@ -18,16 +18,15 @@ MockPermissionRequest::MockPermissionRequest()
                             "button",
                             "button",
                             GURL("http://www.google.com"),
-                            PermissionRequestType::UNKNOWN,
+                            PermissionRequestType::PERMISSION_NOTIFICATIONS,
                             PermissionRequestGestureType::UNKNOWN) {}
 
-MockPermissionRequest::MockPermissionRequest(
-    const std::string& text)
+MockPermissionRequest::MockPermissionRequest(const std::string& text)
     : MockPermissionRequest(text,
                             "button",
                             "button",
                             GURL("http://www.google.com"),
-                            PermissionRequestType::UNKNOWN,
+                            PermissionRequestType::PERMISSION_NOTIFICATIONS,
                             PermissionRequestGestureType::UNKNOWN) {}
 
 MockPermissionRequest::MockPermissionRequest(
@@ -51,15 +50,14 @@ MockPermissionRequest::MockPermissionRequest(const std::string& text,
                             request_type,
                             PermissionRequestGestureType::UNKNOWN) {}
 
-MockPermissionRequest::MockPermissionRequest(
-    const std::string& text,
-    const std::string& accept_label,
-    const std::string& deny_label)
+MockPermissionRequest::MockPermissionRequest(const std::string& text,
+                                             const std::string& accept_label,
+                                             const std::string& deny_label)
     : MockPermissionRequest(text,
                             accept_label,
                             deny_label,
                             GURL("http://www.google.com"),
-                            PermissionRequestType::UNKNOWN,
+                            PermissionRequestType::PERMISSION_NOTIFICATIONS,
                             PermissionRequestGestureType::UNKNOWN) {}
 
 MockPermissionRequest::~MockPermissionRequest() {}
