chrome/browser/permissions/permission_request.cc
@@ -11,10 +11,6 @@ bool PermissionRequest::ShouldShowPersistenceToggle() const {
   return false;
 }
 
-PermissionRequestType PermissionRequest::GetPermissionRequestType() const {
-  return PermissionRequestType::UNKNOWN;
-}
-
 PermissionRequestGestureType PermissionRequest::GetGestureType() const {
   return PermissionRequestGestureType::UNKNOWN;
 }
